Fix chaintips sync when removed from list Add Orphans (chaintips) to the frontend & API Add direct link from layout boxes to charts
